--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=CsySZHNkEC0augUrY0mGbFjQGtOOan99
+JWT_TTL=null
